# ICFPC2023

./: .gitignore  LICENSE  README.md  build-next-portal.sh  deno.jsonc  download.ts  input.json  paint_all.ts  publish_portal.sh
build_recipes/: a.out  charibert.sh  charibert_pillar.sh  kawatea_block.sh  kawatea_block_pillar.sh  kawatea_pillar_iterate.sh  kawatea_random_push.sh  scorer.sh
kawatea/: block.cpp  block_iterate.cpp  block_pillar.cpp  block_pillar_iterate.cpp  build.sh  input.json  no_block.cpp  run.sh  run_new.sh
kenkoooo/: Cargo.toml
kenkoooo/src/: lib.rs  main.rs  problem.rs  score.rs  solution.rs  types.rs
kenkoooo/src/io/: mod.rs
kenkoooo/src/solver/: mod.rs  sa.rs  sa2.rs
migration/: 01-init.sql  02-add-tag.sql
mkut/: block_pillar.cpp  info.txt  init_maker.cpp  kawatea_random.cpp  kawatea_random_custom.cpp  kawatea_random_music.cpp  kawatea_random_random.cpp  kawatea_random_single.cpp  main.cpp  rect.cpp
next-portal/: next.config.js  package.json  publish_portal.sh
osak/: build.json  build.sh  current_best.json  gen_images.rb  gen_input.rb  input.json  invoke_step.sh  seeds.rb
painter/: cli.ts  codec.ts  core.ts  paint_solutions.ts  problem.ts  svg.ts
portal/: lambda.ts  pack.sh  package-lock.json  package.json  submit_solution.ts  types.ts  upload.sh  upload_looper.sh  upload_runner.sh  upload_syncer.sh
problems/: 56.json  56.json.orig  57.json  57.json.orig  58.json  58.json.orig  59.json  59.json.orig  60.json  60.json.orig  61.json  61.json.orig  62.json  62.json.orig  63.json  63.json.orig  64.json  64.json.orig  65.json  (+52 more)
(+960 files in other folders)
