[package]
name = "kenkoooo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
walkdir = "2.3.3"
